# Arcscope

./: .gitignore  ArcScope_CoreContract.md  Arcscope.docx  README.md  arcscope.md
app/: Package.swift
app/Sources/ArcScopeApp/: ArcScopeApp.swift
app/Sources/ArcScopeApp/Backend/: ArcScopeBackend.swift  BridgeBackend.swift  FilmLibraryService.swift  ReferenceLibraryService.swift  VideoAnalysisService.swift
app/Sources/ArcScopeApp/Models/: FilmAnalysis.swift  IssuePresentation.swift  TimeRangeSelection.swift  TimelineFormatting.swift
app/Sources/ArcScopeApp/Services/: AppPaths.swift  FocusedLibraryActions.swift  L10n.swift  SecurityScopedAccess.swift  SecurityScopedBookmarkStore.swift
app/Sources/ArcScopeApp/ViewModels/: ArcScopeViewModel.swift
app/Sources/ArcScopeApp/Views/: ArcScopeCommands.swift  CurveTimelineView.swift  DiagnosticsHeatmap.swift  FilmDetailView.swift  FilmHeaderView.swift  IssueListView.swift  (+4 more)
app/Sources/CAArcScopeBridge/: module.modulemap
bridge/: AudioAnalysisEngine.h  AudioAnalysisEngine.mm  CMakeLists.txt  FaceTrackingEngine.h  FaceTrackingEngine.mm  SubtitleCue.h  SubtitleNLP.h  SubtitleNLP.mm  VideoFeatureExtractor.h  VideoFeatureExtractor.mm
bridge/include/: arcscope_bridge.h
bridge/src/: arcscope_bridge.mm
core/: CMakeLists.txt
core/include/arcscope/: CoreContract.h  CurveEngine.h  Diagnostics.h  FilmEngine.h  FilmTypes.h  MetadataEngine.h  Normalization.h  SQLiteStore.h  Utility.h
core/include/arcscope/features/: ColorFeatures.h  FaceFeatures.h  InfoFeatures.h  MotionFeatures.h  SoundFeatures.h
core/include/arcscope/segmentation/: StructureAnalyzer.h
core/src/: CurveEngine.cpp  Diagnostics.cpp  FilmEngine.cpp  MetadataEngine.cpp  Normalization.cpp  SQLiteStore.cpp  Utility.cpp
core/src/features/: ColorFeatures.cpp  FaceFeatures.cpp  InfoFeatures.cpp  MotionFeatures.cpp  SoundFeatures.cpp
core/src/segmentation/: StructureAnalyzer.cpp
docs/: AppleGuidelinesAcceptanceChecklist.md
(+7 files in other folders)
